tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-with-params.stderr
error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-with-params.rs:7:16
   |
LL | #[derive_const(PartialEq)]
   |                ^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/derive-const-with-params.rs:7:16
   |
LL | #[derive_const(PartialEq)]
   |                ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error[E0284]: type annotations needed
  --> $DIR/derive-const-with-params.rs:11:5
   |
LL |     a == b
   |     ^^^^^^ cannot infer the value of the constant `_`
   |
note: required for `Reverse<i32>` to implement `PartialEq`
  --> $DIR/derive-const-with-params.rs:7:16
   |
LL | #[derive_const(PartialEq)]
   |                ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0207, E0284.
For more information about an error, try `rustc --explain E0207`.
